recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:12: error: ')' expected but integer literal found.
  if (not levels==1) {
                  ^Koch:24: error: illegal start of simple expression
} 
^