recursion.logo.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {
  if (not levels==1) {
    snowSide(levels-1, length)
    left(60)
    snowSide(levels-1, length)
    right(120)
    snowSide(levels-1, length)
    left(60)
    snowSide(levels-1, length)
  }
  else {
    forward(length)
  }
}